try to fix bugs on ios

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ html, body{
 }
 .siteContainer .tabContainer#tabContent04{
     justify-content: center;
+    overflow: hidden;
 }
 .siteContainer .tabContainer#tabContent04 .secondInfo{
     /* overflow: scroll; */
@@ -435,7 +436,7 @@ html, body{
         text-align: center;
         align-items: center;
         flex-direction: column-reverse;
-        margin-top: 85px;
+        margin-top: 95px;
         flex-wrap: nowrap;
         height: calc(100vh - 200px);
         justify-content: space-evenly;
@@ -638,6 +639,7 @@ html, body{
     pointer-events: none;
     transition: all 0.3s ease-in-out;
     font-size: 22px;
+    z-index: 4;
 }
 #popupOnStart .buttonEffect{
     position: fixed;
@@ -653,6 +655,7 @@ html, body{
     box-shadow: 0 0 15px var(--mainColor);
     width: 100%;
     height: 100%;
+    z-index: 3;
 }
 #popupOnStart .button.clickedButton .front, #popupOnStart .button.clickedButton .textGlowed{
     transform: translate3d(-27px, 20px, 0) scale(0.95);
@@ -663,6 +666,7 @@ html, body{
     transform: translate3d(-40px, 30px, 0);
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 #popupOnStart .edge{
     box-shadow: 0 0 15px var(--transparentMain);
@@ -670,6 +674,7 @@ html, body{
     width: 100%;
     box-shadow: 0 0 10px var(--mainColor), 0 0 50px var(--mainColor);
     height: 100%;
+    z-index: 1;
 }
 .buttonEffect {
     filter: brightness(1.5) hue-rotate(30deg);
